--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,14 @@ rvm:
   - 2.3
   - jruby
 
-# for now just override the default `bundle exec rake` which fails because of an
-# unresolved superclass mismatch in `core.rb` vs. `version.rb`
+# Workaround for `NoMethodError: undefined method 'spec' for nil:NilClass`,
+# see https://travis-ci.org/jmcnevin/rubypants/jobs/167182556
+# and https://github.com/travis-ci/travis-ci/issues/5239
+before_install:
+  - gem install bundler
+
+# For now override the default `bundle exec rake` which fails because of an
+# unresolved superclass mismatch in `core.rb` vs. `version.rb`. This should
+# eventually be fixed in rubypants.
 script:
   - rake
